Adds detection for Background Intelligent Transfer Service

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -773,3 +773,9 @@
     type: mobile app
     name: Windows Push Notification Services
     version: "10.0"
+-
+  user_agent: Microsoft BITS/7.8
+  client:
+    type: mobile app
+    name: Background Intelligent Transfer Service
+    version: "7.8"
