--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -819,3 +819,8 @@
 - regex: 'Microsoft-WNS/(\d+[\.\d]+)'
   name: 'Windows Push Notification Services'
   version: '$1'
+
+# Background Intelligent Transfer Service (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft BITS/(\d+[\.\d]+)'
+  name: 'Background Intelligent Transfer Service'
+  version: '$1'
