Improves Windows detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2655,3 +2655,19 @@
     version: ""
     platform: ""
     family: Windows
+-
+  user_agent: Microsoft-WNS/10.0
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: Microsoft BITS/7.8
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
