--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -354,7 +354,7 @@
   name: 'Windows'
   version: ''
 
-- regex: '(?:Windows(?:-Update-Agent)?|Microsoft-(?:CryptoAPI|Delivery-Optimization))/(\d+\.\d+)'
+- regex: '(?:Windows(?:-Update-Agent)?|Microsoft-(?:CryptoAPI|Delivery-Optimization|WNS))/(\d+\.\d+)'
   name: 'Windows'
   version: '$1'
 
@@ -414,7 +414,7 @@
   name: 'Windows'
   version: '3.1'
 
-- regex: 'Windows|Win64|MSDW|HandBrake Win Upd'
+- regex: 'Windows|Win64|MSDW|HandBrake Win Upd|Microsoft BITS'
   name: 'Windows'
   version: ''
 
