Adds detection for ESET Remote Administrator

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -779,3 +779,9 @@
     type: mobile app
     name: Background Intelligent Transfer Service
     version: "7.8"
+-
+  user_agent: 'ERA Agent Update (Windows; U; 64bit; BPC 8.0.1238.0; OS: 10.0.19042 SP 0.0 NT; x64c; APP era; HWF: 0100CC8A-BE80-F512-E058-0DE202DAC0CB; PLOC en_US; PCODE 901.0.0; PX 0)'
+  client:
+    type: mobile app
+    name: ESET Remote Administrator
+    version: ""
