--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -350,6 +350,10 @@
   name: 'Windows'
   version: '$1'
 
+- regex: 'Windows.+OS: (\d+[\.\d]*)'
+  name: 'Windows'
+  version: '$1'
+
 - regex: 'mingw32|winhttp'
   name: 'Windows'
   version: ''
