Improves Windows version detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2679,3 +2679,11 @@
     version: 10.0.19042
     platform: x64
     family: Windows
+-
+  user_agent: NGC/22.21.9.25 MID/{00000000-0000-0000-0000-000000000000} SID/BU2KYQAAAAA LUE/1.17.0.4 (Windows;10.0;SP0.0;X64;en-GB)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: x64
+    family: Windows
