--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -354,6 +354,10 @@
   name: 'Windows'
   version: '$1'
 
+- regex: 'Windows;(\d+[\.\d]*);'
+  name: 'Windows'
+  version: '$1'
+
 - regex: 'mingw32|winhttp'
   name: 'Windows'
   version: ''
