Adds detection for Epic Games Launcher

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -829,3 +829,8 @@
 - regex: 'ERA Agent Update'
   name: 'ESET Remote Administrator'
   version: ''
+
+# Epic Games Launcher (https://www.epicgames.com/store/en-US/download)
+- regex: 'EpicGamesLauncher/(\d+[\.\d]+)'
+  name: 'Epic Games Launcher'
+  version: '$1'
