Improves Windows detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2687,3 +2687,11 @@
     version: "10.0"
     platform: x64
     family: Windows
+-
+  user_agent: Microsoft-WebDAV-MiniRedir/10.0.19042
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
