--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -791,3 +791,9 @@
     type: mobile app
     name: Epic Games Launcher
     version: 12.0.8
+-
+  user_agent: Microsoft-WebDAV-MiniRedir/10.0.19042
+  client:
+    type: mobile app
+    name: WebDAV
+    version: ""
