Adds detection for Battle.net

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -797,3 +797,9 @@
     type: mobile app
     name: WebDAV
     version: ""
+-
+  user_agent: Battle.net/2.6.0.13147 (retail)
+  client:
+    type: mobile app
+    name: Battle.net
+    version: 2.6.0.13147
