--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -839,3 +839,8 @@
 - regex: 'Microsoft-WebDAV-MiniRedir'
   name: 'WebDAV'
   version: ''
+
+# Battle.net  (https://eu.shop.battle.net/en-us)
+- regex: 'Battle.net/(\d+[\.\d]+)'
+  name: 'Battle.net'
+  version: '$1'
