Improves iPadOS detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2695,3 +2695,11 @@
     version: "10.0"
     platform: ""
     family: Windows
+-
+  user_agent: iPad5,3/14.8 (18H17)
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: "14.8"
+    platform: ""
+    family: iOS
