--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -462,6 +462,10 @@
   name: 'iPadOS'
   version: '$1.$2'
 
+- regex: '^iPad(?:\d+[\,\d]*)/(1[345]).(\d+[\.\d]*)'
+  name: 'iPadOS'
+  version: '$1.$2'
+
 - regex: 'iPad(?:; iOS|.+CPU OS) ((1[345])+(?:[_\.]\d+)*)'
   name: 'iPadOS'
   version: '$1'
