Improves iOS detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2703,3 +2703,19 @@
     version: "14.8"
     platform: ""
     family: iOS
+-
+  user_agent: iPad4,7/12.5.1 (16H22)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 12.5.1
+    platform: ""
+    family: iOS
+-
+  user_agent: iPhone7,2/12.5.5 (16H62)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 12.5.5
+    platform: ""
+    family: iOS
