Improves Mac detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -799,7 +799,7 @@
   name: 'Mac'
   version: '$1'
 
-- regex: 'macOS/(\d+[\.\d]+)'
+- regex: '(?:macOS/|Mac-)(\d+[\.\d]+)'
   name: 'Mac'
   version: '$1'
 
