Improves Mac detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2727,3 +2727,11 @@
     version: "11.4"
     platform: ""
     family: Mac
+-
+  user_agent: server-bag [macOS,11.6.1,20G224,MacBookAir6,2]
+  os:
+    name: Mac
+    short_name: MAC
+    version: 11.6.1
+    platform: ""
+    family: Mac
