Improves Mac detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2735,3 +2735,11 @@
     version: 11.6.1
     platform: ""
     family: Mac
+-
+  user_agent: AppleExchangeWebServices/818.0.1 Mail/3693.20.0.1.32
+  os:
+    name: Mac
+    short_name: MAC
+    version: ""
+    platform: ""
+    family: Mac
