Improves Mac detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2743,3 +2743,11 @@
     version: ""
     platform: ""
     family: Mac
+-
+  user_agent: com.apple.trustd/2.0
+  os:
+    name: Mac
+    short_name: MAC
+    version: ""
+    platform: ""
+    family: Mac
