Adds detection for Bookshelf

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -803,3 +803,9 @@
     type: mobile app
     name: Battle.net
     version: 2.6.0.13147
+-
+  user_agent: Bookshelf-Android/10.0.3 (Android OS/9; Samsung Chromebook 3) vitalsource
+  client:
+    type: mobile app
+    name: Bookshelf
+    version: 10.0.3
