--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -844,3 +844,8 @@
 - regex: 'Battle.net/(\d+[\.\d]+)'
   name: 'Battle.net'
   version: '$1'
+
+# Bookshelf (https://play.google.com/store/apps/details?id=com.vitalsource.bookshelf)
+- regex: 'Bookshelf-Android/(\d+[\.\d]+)'
+  name: 'Bookshelf'
+  version: '$1'
