Improves Android detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2751,3 +2751,11 @@
     version: ""
     platform: ""
     family: Mac
+-
+  user_agent: Bookshelf-Android/10.0.3 (Android OS/9; Samsung Chromebook 3) vitalsource
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+    family: Android
