--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -135,6 +135,10 @@
   name: 'Android'
   version: ''
 
+- regex: 'Android OS/(\d+[\.\d]*)'
+  name: 'Android'
+  version: '$1'
+
 - regex: 'Pinterest for Android/.+; (\d(?:[\d\.]+)?)\)$'
   name: 'Android'
   version: '$1'
