Adds detection for Samsung Chromebook 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15562,6 +15562,11 @@ Samsung:
       model: 'E2152'
       device: 'feature phone'
 
+    # explicit notebooks
+    - regex: 'Chromebook 3'
+      model: 'Chromebook 3'
+      device: 'desktop'
+
     # general detections
     - regex: '(?:SAMSUNG-)?(GT-(P|N8|N5)[0-9]+[a-z]?)'
       device: 'tablet'
