--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7764,3 +7764,19 @@
     model: MacBook Air 13" (2013-2014)
   os_family: Mac
   browser_family: Unknown
+-
+  user_agent: Bookshelf-Android/10.0.3 (Android OS/9; Samsung Chromebook 3) vitalsource
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Bookshelf
+    version: 10.0.3
+  device:
+    type: desktop
+    brand: Samsung
+    model: Chromebook 3
+  os_family: Android
+  browser_family: Unknown
