Adds detection for Rave Social

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -809,3 +809,9 @@
     type: mobile app
     name: Bookshelf
     version: 10.0.3
+-
+  user_agent: RaveSocial/3.8.5;Android/10;Density/1.96875;Device/SM-A705FN;Manufacturer/samsung;ScreenWidth/810;ScreenHeight/1649
+  client:
+    type: mobile app
+    name: Rave Social
+    version: 3.8.5
