--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -849,3 +849,8 @@
 - regex: 'Bookshelf-Android/(\d+[\.\d]+)'
   name: 'Bookshelf'
   version: '$1'
+
+# Rave Social (https://www.ravesocial.com/)
+- regex: 'RaveSocial/(\d+[\.\d]+)'
+  name: 'Rave Social'
+  version: '$1'
