Adds detection for Telpo TPS320

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17600,6 +17600,14 @@ Telit:
     - regex: 'Telit[\-_]?([a-z0-9]+)'
       model: '$1'
 
+# Telpo ((https://www.telpo.com.cn/))
+Telpo:
+  regex: 'TPS320'
+  device: 'peripheral'
+  models:
+    - regex: 'TPS320'
+      model: 'TPS320'
+
 # ThL
 ThL:
   regex: 'ThL[ _-]|(?:Knight 2|THL5000|T200)(?:[);/ ]|$)'
