Adds detection for Motorola Moto G Stylus (2021)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12132,6 +12132,8 @@ Motorola:
       model: 'One 5G Ace'
     - regex: 'motorola one vision'
       model: 'One Vision'
+    - regex: 'moto g stylus \(2021\)'
+      model: 'Moto G Stylus (2021)'
     - regex: 'moto g stylus'
       model: 'Moto G Stylus'
     - regex: 'moto g power'
