Improves iOS detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -637,7 +637,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'iPhone OS,([\d\.]+).+iPhone'
+- regex: 'iPhone OS,([\d\.]+).+(?:iPhone|iPod)'
   name: 'iOS'
   version: '$1'
 
