Improves iOS detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2767,3 +2767,11 @@
     version: 10.3.2
     platform: ""
     family: iOS
+-
+  user_agent: CaptiveNetworkSupport-416 wispr
+  os:
+    name: iOS
+    short_name: IOS
+    version: ""
+    platform: ""
+    family: iOS
