Improves Sony detection

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6171,6 +6171,9 @@ Sony:
     - regex: 'Sony ?Ericsson ?([a-z0-9\-]+)'
       model: '$1'
       brand: 'Sony Ericsson'
+    - regex: 'Sony Corporation/([^/;]*)\)'
+      model: '$1'
+      device: 'desktop'
 
     - regex: 'Sony (Tablet[^/;]*) Build'
       model: '$1'
