--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7780,3 +7780,19 @@
     model: Chromebook 3
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.12527.21962 (Windows/6.1; Desktop x86; es-MX; Desktop app; Sony Corporation/VGN-FE650FM)
+  os:
+    name: Windows
+    version: "6.1"
+    platform: x86
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.12527.21962
+  device:
+    type: desktop
+    brand: Sony
+    model: VGN-FE650FM
+  os_family: Windows
+  browser_family: Unknown
