Adds detection for Motorola Moto G Play (2021)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12139,6 +12139,8 @@ Motorola:
       model: 'Moto G Stylus (2021)'
     - regex: 'moto g stylus'
       model: 'Moto G Stylus'
+    - regex: 'moto g play \(2021\)'
+      model: 'Moto G Play (2021)'
     - regex: 'moto g power'
       model: 'Moto G Power'
     - regex: 'moto g pro'
