--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9132,17 +9132,15 @@
     version: "10.0"
     platform: ""
   client:
-    type: browser
-    name: Microsoft Edge
-    version: "15.15063"
-    engine: Edge
-    engine_version: "15.15063"
+    type: mobile app
+    name: Cortana
+    version: 1.8.12.15063
   device:
     type: smartphone
     brand: Microsoft
     model: Lumia 640 Dual SIM
   os_family: Windows Mobile
-  browser_family: Internet Explorer
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 6.0.1; Microsoft; Lumia 640 XL LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.79 Mobile Safari/537.36 Edge/14.14393
   os:
