Improves detection for iOS, iPadOS, macOS, Android, Windows, Apple, Motorola, Samsung and Sony brands, and adds detection for Telco brand and various apps (#6903)
* Adds detection for Mailbird

* Adds detection for Hik-Connect

* Improves detection for Microsoft Outlook

* Improve version detection for Pinterest

* Adds detection for Cortana

* Adds detection for Opera News

* Adds detection for Adobe Creative Cloud

* Improves detection for Skype for Business

* Adds detection for Flipp

* Adds detection for rekordbox

* Improves x64 platform detection

* Adds detection for Chrome Update

* Improves Windows detection

* Correct fixture

* Adds detection for Windows Push Notification Services

* Adds detection for Background Intelligent Transfer Service

* Improves Windows detection

* Adds detection for ESET Remote Administrator

* Improves Windows version detection

* Improves Windows version detection

* Adds detection for Epic Games Launcher

* Improves Windows detection

* Adds detection for WebDAV

* Adds detection for Battle.net

* Improves iPadOS detection

* Improves iOS detection

* Improves Mac detection

* Improves Mac detection

* Improves Apple detection

* Improves Mac detection

* Improves Mac detection

* Adds detection for Bookshelf

* Improves Android detection

* Adds detection for Samsung Chromebook 3

* Adds detection for Rave Social

* Adds detection for Word Cookies!

* Adds detection for Telpo TPS320

* Adds detection for Motorola Moto G Stylus (2021)

* Improves iOS detection

* Improves iOS detection

* Improves Sony detection

* Adds detection for Bible KJV

* Adds detection for Motorola Moto G Play (2021)

* Fix

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7751,3 +7751,48 @@
     model: MacBook Pro 13" (2019)
   os_family: Mac
   browser_family: Unknown
+-
+  user_agent: server-bag [macOS,11.6.1,20G224,MacBookAir6,2]
+  os:
+    name: Mac
+    version: 11.6.1
+    platform: ""
+  client: null
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2013-2014)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Bookshelf-Android/10.0.3 (Android OS/9; Samsung Chromebook 3) vitalsource
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Bookshelf
+    version: 10.0.3
+  device:
+    type: desktop
+    brand: Samsung
+    model: Chromebook 3
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.12527.21962 (Windows/6.1; Desktop x86; es-MX; Desktop app; Sony Corporation/VGN-FE650FM)
+  os:
+    name: Windows
+    version: "6.1"
+    platform: x86
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.12527.21962
+  device:
+    type: desktop
+    brand: Sony
+    model: VGN-FE650FM
+  os_family: Windows
+  browser_family: Unknown
