--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -81,7 +81,7 @@
   version: '$1'
 
 # Pinterest
-- regex: 'Pinterest(?: for (?:Android|iOS))?(?:/([\d\.]+))?'
+- regex: 'Pinterest(?: for (?:Android(?: Tablet)?|iOS))?(?:/([\d\.]+))?'
   name: 'Pinterest'
   version: '$1'
 
@@ -103,6 +103,15 @@
 # Downcast (www.downcastapp.com | https://apps.apple.com/us/app/downcast/id393858566)
 - regex: 'Downcast/(\d+\.[\d\.]+)?(?:.+(?:!Mac)|$)'
   name: 'Downcast'
+  version: '$1'
+
+# Flipp (https://apps.apple.com/us/app/flipp-weekly-shopping/id725097967)
+- regex: 'Flipp-iOS/.+CFNetwork'
+  name: 'Flipp'
+  version: ''
+
+- regex: 'Flipp-iOS/(\d+[\.\d]+)'
+  name: 'Flipp'
   version: '$1'
 
 # AFNetworking generic
@@ -359,6 +368,11 @@
   version: '$1'
 
 - regex: 'OC/([\d\.]+) \(Skype for Business\)'
+  name: 'Skype for Business'
+  version: '$1'
+
+# https://apps.apple.com/us/app/skype-for-business/id605841731
+- regex: 'iPhoneLync/([\d\.]+)'
   name: 'Skype for Business'
   version: '$1'
 
@@ -766,7 +780,87 @@
   name: 'Edge Update'
   version: '$1'
 
+# Chrome Update (https://www.google.com/chrome/)
+- regex: 'Google(?:Software| )Update/(\d+[\.\d]+)'
+  name: 'Chrome Update'
+  version: '$1'
+
 # Bose Music (https://apps.apple.com/us/app/bose-music/id1364986984)
 - regex: 'Bose Music'
   name: 'Bose Music'
   version: ''
+
+# HikConnect (https://apps.apple.com/us/app/hik-connect-for-end-user/id1087803190)
+- regex: 'HikConnect'
+  name: 'Hik-Connect'
+  version: ''
+
+# Cortana (https://www.microsoft.com/en-us/)
+- regex: 'Cortana (\d+[\.\d]+)'
+  name: 'Cortana'
+  version: '$1'
+
+# Opera News (https://play.google.com/store/apps/details?id=com.opera.app.news)
+- regex: 'Opera News/(\d+[\.\d]+)'
+  name: 'Opera News'
+  version: '$1'
+
+# Adobe Creative Cloud (https://apps.apple.com/us/app/adobe-creative-cloud/id852473028)
+- regex: 'CreativeCloud/(\d+[\.\d]+)'
+  name: 'Adobe Creative Cloud'
+  version: '$1'
+
+# rekordbox (https://rekordbox.com/en/)
+- regex: 'rekordbox/(\d+[\.\d]+)'
+  name: 'rekordbox'
+  version: '$1'
+
+# Windows Push Notification Services (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft-WNS/(\d+[\.\d]+)'
+  name: 'Windows Push Notification Services'
+  version: '$1'
+
+# Background Intelligent Transfer Service (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft BITS/(\d+[\.\d]+)'
+  name: 'Background Intelligent Transfer Service'
+  version: '$1'
+
+# ESET Remote Administrator (https://www.eset.com/me/business/remote-management/remote-administrator/)
+- regex: 'ERA Agent Update'
+  name: 'ESET Remote Administrator'
+  version: ''
+
+# Epic Games Launcher (https://www.epicgames.com/store/en-US/download)
+- regex: 'EpicGamesLauncher/(\d+[\.\d]+)'
+  name: 'Epic Games Launcher'
+  version: '$1'
+
+# WebDAV (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft-WebDAV-MiniRedir'
+  name: 'WebDAV'
+  version: ''
+
+# Battle.net  (https://eu.shop.battle.net/en-us)
+- regex: 'Battle.net/(\d+[\.\d]+)'
+  name: 'Battle.net'
+  version: '$1'
+
+# Bookshelf (https://play.google.com/store/apps/details?id=com.vitalsource.bookshelf)
+- regex: 'Bookshelf-Android/(\d+[\.\d]+)'
+  name: 'Bookshelf'
+  version: '$1'
+
+# Rave Social (https://www.ravesocial.com/)
+- regex: 'RaveSocial/(\d+[\.\d]+)'
+  name: 'Rave Social'
+  version: '$1'
+
+# Word Cookies! (https://apps.apple.com/us/app/word-cookies/id1153883316)
+- regex: 'wordcookies/(\d+[\.\d]+)'
+  name: 'Word Cookies!'
+  version: '$1'
+
+# Bible KJV (https://apps.apple.com/us/app/bible-kjv/id544098932)
+- regex: 'com.meevii.bibleKJV/(\d+[\.\d]+)'
+  name: 'Bible KJV'
+  version: '$1'
