--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -701,3 +701,129 @@
     type: mobile app
     name: TikTok
     version: 21.0.0
+-
+  user_agent: HikConnect/200717 (iPhone; iOS 14.4; Scale/2.00)
+  client:
+    type: mobile app
+    name: Hik-Connect
+    version: ""
+-
+  user_agent: Pinterest for Android Tablet/9.32.1 (gta4xlwifi; 11)
+  client:
+    type: mobile app
+    name: Pinterest
+    version: 9.32.1
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; Cortana 1.14.2.19041; 10.0.0.0.19042.1288) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 Safari/537.36 Edge/18.19042
+  client:
+    type: mobile app
+    name: Cortana
+    version: 1.14.2.19041
+-
+  user_agent: Opera News/8.3.2254.55686/52.0.2743.10 (Android 11)
+  client:
+    type: mobile app
+    name: Opera News
+    version: 8.3.2254.55686
+-
+  user_agent: CreativeCloud/5.6.0.788/Mac-11.4
+  client:
+    type: mobile app
+    name: Adobe Creative Cloud
+    version: 5.6.0.788
+-
+  user_agent: iPhoneLync/6.28.1.8 (iPhone iOS 14.7.1)
+  client:
+    type: mobile app
+    name: Skype for Business
+    version: 6.28.1.8
+-
+  user_agent: Flipp-iOS/775 CFNetwork/1240.0.4 Darwin/20.6.0
+  client:
+    type: mobile app
+    name: Flipp
+    version: ""
+-
+  user_agent: Flipp-iOS/19.0.0 (iPhone; iOS 14.8; Scale/2.00)
+  client:
+    type: mobile app
+    name: Flipp
+    version: 19.0.0
+-
+  user_agent: rekordbox/5.8.6.0004 Windows 10(64bit)
+  client:
+    type: mobile app
+    name: rekordbox
+    version: 5.8.6.0004
+-
+  user_agent: GoogleSoftwareUpdate/1.3.16.180 CFNetwork/1325.0.1 Darwin/21.1.0
+  client:
+    type: mobile app
+    name: Chrome Update
+    version: 1.3.16.180
+-
+  user_agent: Google Update/1.3.36.112;winhttp
+  client:
+    type: mobile app
+    name: Chrome Update
+    version: 1.3.36.112
+-
+  user_agent: Microsoft-WNS/10.0
+  client:
+    type: mobile app
+    name: Windows Push Notification Services
+    version: "10.0"
+-
+  user_agent: Microsoft BITS/7.8
+  client:
+    type: mobile app
+    name: Background Intelligent Transfer Service
+    version: "7.8"
+-
+  user_agent: 'ERA Agent Update (Windows; U; 64bit; BPC 8.0.1238.0; OS: 10.0.19042 SP 0.0 NT; x64c; APP era; HWF: 0100CC8A-BE80-F512-E058-0DE202DAC0CB; PLOC en_US; PCODE 901.0.0; PX 0)'
+  client:
+    type: mobile app
+    name: ESET Remote Administrator
+    version: ""
+-
+  user_agent: 'EpicGamesLauncher/12.0.8-15573162   Portal Release-Live Windows/10.0.19041.1.768.64bit'
+  client:
+    type: mobile app
+    name: Epic Games Launcher
+    version: 12.0.8
+-
+  user_agent: Microsoft-WebDAV-MiniRedir/10.0.19042
+  client:
+    type: mobile app
+    name: WebDAV
+    version: ""
+-
+  user_agent: Battle.net/2.6.0.13147 (retail)
+  client:
+    type: mobile app
+    name: Battle.net
+    version: 2.6.0.13147
+-
+  user_agent: Bookshelf-Android/10.0.3 (Android OS/9; Samsung Chromebook 3) vitalsource
+  client:
+    type: mobile app
+    name: Bookshelf
+    version: 10.0.3
+-
+  user_agent: RaveSocial/3.8.5;Android/10;Density/1.96875;Device/SM-A705FN;Manufacturer/samsung;ScreenWidth/810;ScreenHeight/1649
+  client:
+    type: mobile app
+    name: Rave Social
+    version: 3.8.5
+-
+  user_agent: wordcookies/21.0930.01 CFNetwork/1240.0.4 Darwin/20.6.0
+  client:
+    type: mobile app
+    name: Word Cookies!
+    version: 21.0930.01
+-
+  user_agent: iOS/14.8 com.meevii.bibleKJV/2.83.0
+  client:
+    type: mobile app
+    name: Bible KJV
+    version: 2.83.0
