--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2639,3 +2639,139 @@
     version: 11.2.2
     platform: x64
     family: Mac
+-
+  user_agent: rekordbox/5.8.6.0004 Windows 10(64bit)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+    family: Windows
+-
+  user_agent: Google Update/1.3.36.112;winhttp
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
+-
+  user_agent: Microsoft-WNS/10.0
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: Microsoft BITS/7.8
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
+-
+  user_agent: 'ERA Agent Update (Windows; U; 64bit; BPC 8.0.1238.0; OS: 10.0.19042 SP 0.0 NT; x64c; APP era; HWF: 0100CC8A-BE80-F512-E058-0DE202DAC0CB; PLOC en_US; PCODE 901.0.0; PX 0)'
+  os:
+    name: Windows
+    short_name: WIN
+    version: 10.0.19042
+    platform: x64
+    family: Windows
+-
+  user_agent: NGC/22.21.9.25 MID/{00000000-0000-0000-0000-000000000000} SID/BU2KYQAAAAA LUE/1.17.0.4 (Windows;10.0;SP0.0;X64;en-GB)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: x64
+    family: Windows
+-
+  user_agent: Microsoft-WebDAV-MiniRedir/10.0.19042
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: iPad5,3/14.8 (18H17)
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: "14.8"
+    platform: ""
+    family: iOS
+-
+  user_agent: iPad4,7/12.5.1 (16H22)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 12.5.1
+    platform: ""
+    family: iOS
+-
+  user_agent: iPhone7,2/12.5.5 (16H62)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 12.5.5
+    platform: ""
+    family: iOS
+-
+  user_agent: CreativeCloud/5.6.0.788/Mac-11.4
+  os:
+    name: Mac
+    short_name: MAC
+    version: "11.4"
+    platform: ""
+    family: Mac
+-
+  user_agent: server-bag [macOS,11.6.1,20G224,MacBookAir6,2]
+  os:
+    name: Mac
+    short_name: MAC
+    version: 11.6.1
+    platform: ""
+    family: Mac
+-
+  user_agent: AppleExchangeWebServices/818.0.1 Mail/3693.20.0.1.32
+  os:
+    name: Mac
+    short_name: MAC
+    version: ""
+    platform: ""
+    family: Mac
+-
+  user_agent: com.apple.trustd/2.0
+  os:
+    name: Mac
+    short_name: MAC
+    version: ""
+    platform: ""
+    family: Mac
+-
+  user_agent: Bookshelf-Android/10.0.3 (Android OS/9; Samsung Chromebook 3) vitalsource
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+    family: Android
+-
+  user_agent: server-bag [iPhone OS,10.3.2,14F89,iPod7,1]
+  os:
+    name: iOS
+    short_name: IOS
+    version: 10.3.2
+    platform: ""
+    family: iOS
+-
+  user_agent: CaptiveNetworkSupport-416 wispr
+  os:
+    name: iOS
+    short_name: IOS
+    version: ""
+    platform: ""
+    family: iOS
