Adds detection for MetaTrader and improves detection for M.T.T. brand

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -864,3 +864,8 @@
 - regex: 'com.meevii.bibleKJV/(\d+[\.\d]+)'
   name: 'Bible KJV'
   version: '$1'
+
+# MetaTrader (https://www.metatrader5.com/)
+- regex: 'MetaTrader 5 Terminal/(\d+[\.\d]+)'
+  name: 'MetaTrader'
+  version: '$1'
