--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12357,13 +12357,13 @@ Myria:
 
 # M.T.T.
 M.T.T.:
-  regex: 'M.T.T.'
+  regex: 'M\.T\.T\.'
   device: 'smartphone'
   models:
-    - regex: 'M.T.T. ?Tablet([^;/]+)? Build'
+    - regex: 'M\.T\.T\. ?Tablet([^;/]+)? Build'
       device: 'tablet'
       model: 'Tablet$1'
-    - regex: 'M.T.T. ?([^;/]+) Build'
+    - regex: 'M\.T\.T\. ?([^;/]+) Build'
       model: '$1'
 
 # Navon
