Adds detection for Paint by Number

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -869,3 +869,8 @@
 - regex: 'MetaTrader 5 Terminal/(\d+[\.\d]+)'
   name: 'MetaTrader'
   version: '$1'
+
+# Paint by Number (https://www.metatrader5.com/https://apps.apple.com/us/app/paint-by-number-coloring-games/id1420058690)
+- regex: 'com.paint.bynumber/(\d+[\.\d]+)'
+  name: 'Paint by Number'
+  version: '$1'
