Adds detection for ZEPETO

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -839,3 +839,9 @@
     type: mobile app
     name: Paint by Number
     version: 2.72.0
+- 
+  user_agent: ios.zepeto_global/3.6.2 (ios; U; iOS 14.7.1; en-CA; occ-CA; iPhone 11);ZEPETO
+  client:
+    type: mobile app
+    name: ZEPETO
+    version: 3.6.2
