Adds detection for Jungle Disk

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -839,9 +839,15 @@
     type: mobile app
     name: Paint by Number
     version: 2.72.0
-- 
+-
   user_agent: ios.zepeto_global/3.6.2 (ios; U; iOS 14.7.1; en-CA; occ-CA; iPhone 11);ZEPETO
   client:
     type: mobile app
     name: ZEPETO
     version: 3.6.2
+-
+  user_agent: Jungle Disk Workgroup HTTP/110 (Windows 10.0 64-bit)
+  client:
+    type: mobile app
+    name: Jungle Disk
+    version: ""
