--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -879,3 +879,8 @@
 - regex: 'zepeto_global/(\d+[\.\d]+)'
   name: 'ZEPETO'
   version: '$1'
+
+# Jungle Disk (https://www.jungledisk.com/)
+- regex: 'Jungle Disk Workgroup HTTP'
+  name: 'Jungle Disk'
+  version: ''
