Adds detection for Nextcloud

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -851,3 +851,9 @@
     type: mobile app
     name: Jungle Disk
     version: ""
+-
+  user_agent: Mozilla/5.0 (Android) Nextcloud-android/3.17.1
+  client:
+    type: mobile app
+    name: Nextcloud
+    version: 3.17.1
