--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -884,3 +884,8 @@
 - regex: 'Jungle Disk Workgroup HTTP'
   name: 'Jungle Disk'
   version: ''
+
+# Nextcloud (https://play.google.com/store/apps/details?id=com.nextcloud.client)
+- regex: 'Nextcloud-android/(\d+[\.\d]+)'
+  name: 'Nextcloud'
+  version: '$1'
