Improves detection for Teams

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -857,3 +857,9 @@
     type: mobile app
     name: Nextcloud
     version: 3.17.1
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 14_6 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 TeamsMobile-iOS
+  client:
+    type: mobile app
+    name: Teams
+    version: ""
