--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -621,6 +621,10 @@
   name: 'Teams'
   version: '$1'
 
+- regex: 'TeamsMobile-iOS'
+  name: 'Teams'
+  version: ''
+
 # Streamlabs OBS (https://streamlabs.com/)
 - regex: 'StreamlabsOBS/(\d+[\.\d]+)'
   name: 'Streamlabs OBS'
