Adds detection for GoNative

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -893,3 +893,8 @@
 - regex: 'Nextcloud-android/(\d+[\.\d]+)'
   name: 'Nextcloud'
   version: '$1'
+
+# GoNative (https://gonative.io/)
+- regex: 'GoNativeIOS/(\d+[\.\d]+)'
+  name: 'GoNative'
+  version: '$1'
