Adds detection for Pandora

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -869,3 +869,9 @@
     type: mobile app
     name: GoNative
     version: "1.0"
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Pandora/2108.1.1
+  client:
+    type: mobile app
+    name: Pandora
+    version: 2108.1.1
