--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -898,3 +898,8 @@
 - regex: 'GoNativeIOS/(\d+[\.\d]+)'
   name: 'GoNative'
   version: '$1'
+
+# Pandora (https://apps.apple.com/us/app/pandora-music-podcasts/id284035177)
+- regex: 'Pandora/(\d+[\.\d]+)'
+  name: 'Pandora'
+  version: '$1'
