Adds detection for Blackboard

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -875,3 +875,9 @@
     type: mobile app
     name: Pandora
     version: 2108.1.1
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_7_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Safari/605.1 Blackboard/6.9
+  client:
+    type: mobile app
+    name: Blackboard
+    version: "6.9"
