Adds detection for eToro

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -913,3 +913,8 @@
 - regex: 'QQMusic/(\d+[\.\d]+)'
   name: 'QQMusic'
   version: '$1'
+
+# eToro (https://www.etoro.com/)
+- regex: 'etoro-cordova-app'
+  name: 'eToro'
+  version: ''
