Adds detection for Avid Link

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -893,3 +893,9 @@
     type: mobile app
     name: eToro
     version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_16_0) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.11.1 Chrome/65.0.3325.230 Safari/537.36 Avid Link Desktop App/20.4.0.1302
+  client:
+    type: mobile app
+    name: Avid Link
+    version: 20.4.0.1302
