--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -918,3 +918,8 @@
 - regex: 'etoro-cordova-app'
   name: 'eToro'
   version: ''
+
+# Avid Link (https://www.avid.com/products/avid-link)
+- regex: 'Avid Link Desktop App/(\d+[\.\d]+)'
+  name: 'Avid Link'
+  version: '$1'
