Improves detection for Blackboard

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -909,6 +909,10 @@
   name: 'Blackboard'
   version: '$1'
 
+- regex: 'Blackboard/unspecified'
+  name: 'Blackboard'
+  version: ''
+
 # QQMusic (https://apps.apple.com/cn/app/qq%E9%9F%B3%E4%B9%90-%E5%90%AC%E6%88%91%E6%83%B3%E5%90%AC/id414603431)
 - regex: 'QQMusic/(\d+[\.\d]+)'
   name: 'QQMusic'
