--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -899,3 +899,9 @@
     type: mobile app
     name: Avid Link
     version: 20.4.0.1302
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; SM-N981U Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/95.0.4638.50 Mobile Safari/537.36 Blackboard/unspecified
+  client:
+    type: mobile app
+    name: Blackboard
+    version: ""
