Adds detection for Netflix

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -911,3 +911,9 @@
     type: mobile app
     name: Facebook Audience Network
     version: "5.1701"
+-
+  user_agent: 'Gibbon/2020.2.2.0/2020.2.2.0: Netflix/2020.2.2.0 (DEVTYPE=NFANDROID2-PRV-FIRETVSTICK2018; CERTVER=0)'
+  client:
+    type: mobile app
+    name: Netflix
+    version: 2020.2.2.0
