Adds detection for Google Tag Manager

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -917,3 +917,9 @@
     type: mobile app
     name: Netflix
     version: 2020.2.2.0
+-
+  user_agent: GoogleTagManager/4.00 (Linux; U; Android 9; en-us; U693CL Build/U693CL_01.02.03)
+  client:
+    type: mobile app
+    name: Google Tag Manager
+    version: "4.00"
