--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -937,3 +937,8 @@
 - regex: 'Netflix/(\d+[\.\d]+)'
   name: 'Netflix'
   version: '$1'
+
+# Google Tag Manager (https://www.google.com/)
+- regex: 'GoogleTagManager/(\d+[\.\d]+)'
+  name: 'Google Tag Manager'
+  version: '$1'
