--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -4946,3 +4946,39 @@
     model: Fever Plus J
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; SUPRA M84E 3G Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.91 Mobile Safari/537.36 YaApp_Android/11.01/apad YaSearchBrowser/11.01
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: "11.01"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Supra
+    model: M84E 3G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Archos 80 Oxygen) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Archos
+    model: 80 Oxygen
+  os_family: Android
+  browser_family: Chrome
