Improves detection for Sony Xperia 1 III

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5864,7 +5864,7 @@ Sony:
       model: 'Xperia 1 Professional Edition'
     - regex: '(?:Sony(?:Ericsson)?)?(?:SOG01|SO-51A|XQ-AT42|XQ-AT51|SO51Aa|XQ-AT72)(?:[);/ ]|$)'
       model: 'Xperia 1 II'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:SO-51B|SOG03|XQ-BC72)(?:[);/ ]|$)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:SO-51B|SOG03|XQ-BC[57]2)(?:[);/ ]|$)'
       model: 'Xperia 1 III'
     - regex: '(?:Sony(?:Ericsson)?)?LT22i|Xperia P'
       model: 'Xperia P'
