Adds detection for Kocaso M6200

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9217,9 +9217,11 @@ Kingsun:
 
 # Kocaso
 Kocaso:
-  regex: 'Kocaso|M(?:729|7[357][026][hw]?|76[01236][bw]?|83[016]|8[567]0|1050s|106[012368]w?|1070|X736(?:-kit)?|X780)(?:[);/ ]|$)'
+  regex: 'Kocaso|M(?:6200|729|7[357][026][hw]?|76[01236][bw]?|83[016]|8[567]0|1050s|106[012368]w?|1070|X736(?:-kit)?|X780)(?:[);/ ]|$)'
   device: 'tablet'
   models:
+    - regex: 'M6200(?:[);/ ]|$)'
+      model: 'M6200'
     - regex: 'M729(?:[);/ ]|$)'
       model: 'M729'
     - regex: 'M(7[357][026])[hw]?(?:[);/ ]|$)'
