Improves detection for LG Q6

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10774,7 +10774,7 @@ LG:
       model: 'Q51'
     - regex: 'LM-Q630N?(?:[);/ ]|$)'
       model: 'Q61'
-    - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?|LGM-X600[SLK]|LG-US700'
+    - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?|LGM-X600[SLK]|LG-M703|LG-US700'
       model: 'Q6'
     - regex: 'LM-X440IM'
       model: 'W30'
