Adds detection for Cellution brand and Cellution Cosmas

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4357,6 +4357,14 @@ Celkon:
     - regex: 'Celkon[\. _*]([^;/\)]+)[\)/]'
       model: '$1'
 
+# Cellution
+Cellution:
+  regex: 'Cosmas'
+  device: 'smartphone'
+  models:
+    - regex: 'Cosmas'
+      model: 'Cosmas'
+
 # Changhong
 Changhong:
   regex: 'Changhong'
