Adds detection for Cellution Cosmas V

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4359,11 +4359,13 @@ Celkon:
 
 # Cellution
 Cellution:
-  regex: 'Cosmas'
+  regex: 'Cosmas|CT_Cosmas_V'
   device: 'smartphone'
   models:
     - regex: 'Cosmas'
       model: 'Cosmas'
+    - regex: 'CT_Cosmas_V'
+      model: 'Cosmas V'
 
 # Changhong
 Changhong:
