Adds detection for Kazuna brand and Kazuna eTalk MYFLIX

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9150,6 +9150,14 @@ Kazam:
     - regex: 'Kazam[; _]([^;/)]+)(?: Build|\))'
       model: '$1'
 
+# Kazuna (https://kazuna.co.jp/)
+Kazuna:
+  regex: 'KAZ-N20'
+  device: 'smartphone'
+  models:
+    - regex: 'KAZ-N20'
+      model: 'eTalk MYFLIX'
+
 # Keneksi
 Keneksi:
   regex: 'KENEKSI|(?:Hemera|Teta Dual|Helios)(?:[);/ ]|$)'
