Adds detection for Topelotek brand and Topelotek Kids

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17726,6 +17726,12 @@ Top House:
     - regex: 'COTO_T40017'
       model: 'T40017'
 
+# Topelotek
+Topelotek:
+  regex: 'KIDS09'
+  device: 'tablet'
+  model: 'Kids'
+
 # Toplux
 Toplux:
   regex: 'Toplux ([a-z0-9]+)'
