Adds detection for STRONG and STRONG LEAP-S1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24605,6 +24605,14 @@ StrawBerry:
     - regex: 'StrawBerry[ _](SX|QX15)(?:[);/ ]|$)'
       model: '$1'
 
+# STRONG (https://www.strong.tv/)
+STRONG:
+  regex: 'LEAP-S1'
+  device: 'tv'
+  models:
+    - regex: 'LEAP-S1'
+      model: 'LEAP-S1'
+
 # Gresso
 Gresso:
   regex: 'Gresso[ _]|(?:REGAL R2)(?:[);/ ]|$)'
