--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2549,3 +2549,21 @@
     model: AM3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; LEAP-S1 Build/QTT5.200819.003; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/94.0.4606.85 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: STRONG
+    model: LEAP-S1
+  os_family: Android
+  browser_family: Chrome
