--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -965,3 +965,21 @@
     model: Watch Series 7 45mm
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Pacific) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/10.16.0.0.0.296461555 SamsungBrowser/4.0 Chrome/91.0.4472.88 Mobile VR Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 10.16.0.0.0.296461555
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Go
+  os_family: Android
+  browser_family: Chrome
